@@ -3,6 +3,8 @@ package com.sinensia.primerprograma.redes;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -18,16 +20,18 @@ public class URLConnectionDemo {
      * Metodo main para probar la clase URLConnection.
      *
      * @param args argumentos de la linea de comandos
+     * @throws URISyntaxException
      */
     // No cerrar el reader en el try-with-resources ya que URLConnection no
     // implementa AutoCloseable
     @SuppressWarnings("java:S2093")
-    public static void main(String[] args) {
+    public static void main(String[] args) throws URISyntaxException {
         // Definir un BufferedReader a nivel de método para poder cerrarlo en el finally
         BufferedReader reader = null;
+        String serviceUrl = "https://www.ipinfo.io/ip".trim();
 
         try {
-            URL url = new URL("https://www.ipinfo.io/ip");
+            URL url = new URI(serviceUrl).toURL();
             URLConnection connection = url.openConnection();
 
             reader = new BufferedReader(
@@ -40,7 +44,7 @@ public class URLConnectionDemo {
                 System.out.println("Tu dirección IP pública es: " + line);
             }
 
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
         } finally {
             try {
